[package]
name = "aoc-2015-day-04"
version = "0.1.0"
edition = "2021"
authors = ["Jake Ledoux <contactjakeledoux@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
rayon = "1.5.1"

[lib]
doctest = false

[[bin]]
name = "aoc-2015-day-04"
test = false
