[package]
name = "aoc-2015-day-06"
version = "0.1.0"
edition = "2021"
authors = ["Jake Ledoux <contactjakeledoux@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"

[lib]
doctest = false

[[bin]]
name = "aoc-2015-day-06"
test = false
