[package]
name = "aoc-2021-day-03"
version = "0.1.0"
edition = "2021"
authors = ["Jake Ledoux <contactjakeledoux@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.2.1"
itertools = "0.10.1"

[lib]
doctest = false

[[bin]]
name = "aoc-2021-day-03"
test = false

[features]
