[package]
name = "aoc-2021-day-05"
version = "0.1.0"
edition = "2021"
authors = ["Jake Ledoux <contactjakeledoux@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vector2d = "2.2.0"

[lib]
doctest = false

[[bin]]
name = "aoc-2021-day-05"
test = false

[features]
