[package]
name = "day-08"
version = "0.1.0"
edition = "2021"
authors = ["Jake Ledoux <contactjakeledoux@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.26.2"
itertools = "0.10.3"
lazy_static = "1.4.0"

[lib]
doctest = false

[[bin]]
name = "day-08"
test = false
