[package]
name = "day-12"
version = "0.1.0"
edition = "2021"
authors = ["Jake Ledoux <contactjakeledoux@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.26.2"
itertools = "0.10.3"
petgraph = "0.6.0"

[features]
