[package]
name = "aoc-2021-day-12"
version = "0.1.0"
edition = "2021"
authors = ["Jake Ledoux <contactjakeledoux@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
petgraph = "0.6.0"

[features]

[lib]
doctest = false

[[bin]]
name = "aoc-2021-day-12"
test = false
