[package]
name = "aoc-2021-day-17"
version = "0.1.0"
edition = "2021"
authors = ["Jake Ledoux <contactjakeledoux@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22.1"
itertools = "0.10.3"
regex = "1.5.4"

[lib]
doctest = false

[[bin]]
name = "aoc-2021-day-17"
test = false
