[package]
name = "aoc-2021-day-19"
version = "0.1.0"
edition = "2021"
authors = ["Jake Ledoux <contactjakeledoux@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.22.6"
itertools = "0.10.3"

[lib]
doctest = false

[[bin]]
name = "aoc-2021-day-19"
test = false
