[package]
name = "aoc-2021-day-22"
version = "0.1.0"
edition = "2021"
authors = ["Jake Ledoux <contactjakeledoux@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.22.6"
regex = "1.5.4"

[lib]
doctest = false

[[bin]]
name = "aoc-2021-day-22"
test = false
