[package]
name = "aoc-2021-day-23"
version = "0.1.0"
edition = "2021"
authors = ["Jake Ledoux <contactjakeledoux@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.26.2"
rayon = "1.5.1"
regex = "1.5.4"

[lib]
doctest = false

[[bin]]
name = "aoc-2021-day-23"
test = false
