[package]
name = "aoc-2022-day-01"
version = "0.1.0"
edition = "2021"
authors = ["Jake Ledoux <contactjakeledoux@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
smallvec = "1.10.0"

[lib]
doctest = false

[[bin]]
name = "aoc-2022-day-01"
test = false
