[package]
name = "aoc-2022-day-06"
version = "0.1.0"
edition = "2021"
authors = ["Jake Ledoux <contactjakeledoux@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"

[lib]
doctest = false

[[bin]]
name = "aoc-2022-day-06"
test = false
