[package]
name = "aoc-2022-day-08"
version = "0.1.0"
edition = "2021"
authors = ["Jake Ledoux <contactjakeledoux@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"

[lib]
doctest = false

[[bin]]
name = "aoc-2022-day-08"
test = false
