[package]
name = "aoc-2022-day-16"
version = "0.1.0"
edition = "2021"
authors = ["Jake Ledoux <contactjakeledoux@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.40.0"
itertools = "0.10.5"
petgraph = "0.6.2"
regex = "1.7.0"

[lib]
doctest = false

[[bin]]
name = "aoc-2022-day-16"
test = false
